<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/amountLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <FrameLayout
            android:layout_gravity="top"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/shipper_avatar">
            <Button
                android:id="@+id/buttonCloseAmountFrame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:textColor="#F000"
                android:textSize="30sp"
                android:background="#FFFFFF"
                android:text="@string/close"/>
        </FrameLayout>
        <TextView
            android:id="@+id/foodNameInFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textColor="@color/colorOrange"
            android:textStyle="bold"
            android:text="@string/dish_name"/>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/buttonReduce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:text="@string/decrease"/>
            <TextView
                android:id="@+id/dishAmount"
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#F000"
                android:textSize="30sp"
                android:text="1"/>
            <Button
                android:id="@+id/buttonIncrease"
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:text="@string/increase"/>
        </LinearLayout>
    </LinearLayout>
    <!--Thêm-->
    <Button
        android:id="@+id/buttonAddDish"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorOrange"
        android:textSize="30sp"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:text="@string/get_more_dish"/>
</FrameLayout>