<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:id="@+id/res_object">

    <ImageView
        android:id="@+id/rest_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:padding="8dp"
        android:contentDescription="@string/rest_picture_description" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/rest_name"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:padding="2dp"
            android:text="@string/rest_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/rest_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/rest_address" />
    </LinearLayout>
</LinearLayout>