<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF">
    <FrameLayout
        android:background="@color/colorOrange"
        android:layout_width="match_parent"
        android:layout_height="200dp">
        <Button
            android:id="@+id/closeCustomerOptions"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/colorOrange"
            android:textSize="30sp"
            android:textColor="#FFFFFF"
            android:text="X"/>
        <LinearLayout
            android:id="@+id/customerLoginIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                android:textAlignment="center"
                android:text="@string/hello"/>
            <TextView
                android:id="@+id/customerNameInOptions"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:text="Nguyễn Văn A"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/customerDontLoginIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:text="@string/not_signin"/>
           <TableLayout
               android:layout_marginTop="10dp"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:stretchColumns="*">
               <TableRow>
                   <Button
                       android:id="@+id/buttonCustomerSignIn"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:background="@drawable/border_color_orange"
                       android:textColor="#FFFFFF"
                       android:textAllCaps="false"
                       android:textSize="25sp"
                       android:text="@string/sign_in"/>
                   <Button
                       android:id="@+id/buttonCustomerSignUp"
                       android:layout_marginLeft="2dp"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:background="@drawable/border_color_orange"
                       android:textColor="#FFFFFF"
                       android:textAllCaps="false"
                       android:textSize="25sp"
                       android:text="@string/sign_up"/>
               </TableRow>
           </TableLayout>
        </LinearLayout>
    </FrameLayout>

   <LinearLayout
       android:id="@+id/customerChooseOptions"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical">
       <TextView
           android:layout_marginTop="10dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textSize="30sp"
           android:textColor="@color/colorOrange"
           android:text="@string/option"/>
       <FrameLayout
           android:id="@+id/customerChangeLanguage"
           android:background="@drawable/border_color_orange"
           android:layout_width="match_parent"
           android:layout_height="50dp">
           <TextView
               android:layout_width="wrap_content"
               android:layout_gravity="center|left"
               android:layout_height="wrap_content"
               android:textColor="@color/colorOrange"
               android:textSize="25sp"
               android:text="@string/change_language"/>
           <TextView
               android:layout_marginRight="10dp"
               android:layout_gravity="right|center"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textColor="@color/colorOrange"
               android:textSize="25sp"
               android:text=">"/>
       </FrameLayout>

       <FrameLayout
           android:id="@+id/customerLogout"
           android:layout_marginTop="20dp"
           android:background="@drawable/border_color_orange"
           android:layout_width="match_parent"
           android:layout_height="50dp">
           <TextView
               android:layout_gravity="center|left"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textColor="@color/colorOrange"
               android:textSize="25sp"
               android:text="@string/sign_out"/>
           <TextView
               android:layout_marginRight="10dp"
               android:layout_gravity="right|center"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textColor="@color/colorOrange"
               android:textSize="25sp"
               android:text=">"/>
       </FrameLayout>
   </LinearLayout>
</LinearLayout>