<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent">

    <SearchView
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="480dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"></SearchView>

    <ImageView
        android:id="@+id/img_rest"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginTop="51dp"
        android:contentDescription="@string/rest_picture_description"
        android:padding="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="124dp"
        android:layout_marginTop="160dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_rest_name_food_page"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="91dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/rest_name"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/txt_rest_opening_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="48dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/opening_time"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </TextView>

        <TextView
            android:id="@+id/txt_rest_coupon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="80dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/coupon"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </TextView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_order"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:layout_marginTop="480dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="horizontal"
        android:text="@string/confirm_order"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></Button>

    <ListView
        android:id="@+id/list_food"
        android:layout_width="match_parent"
        android:layout_height="195dp"
        android:layout_marginTop="285dp"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbars="vertical"
        android:smoothScrollbar="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ListView>

</androidx.constraintlayout.widget.ConstraintLayout>