<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.Activity.CreatePassword">

    <View
        android:background="@color/colorOrange"
        android:layout_width="match_parent"
        android:layout_height="2dp"></View>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLMatKhauKH"
        android:layout_width="401dp"
        android:layout_height="88dp"
        android:layout_marginTop="88dp"
        android:hint="@string/hint_password_signin"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:errorEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtEMatKhauKH"
            android:layout_width="388dp"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:maxLength="20"
            android:password="true"
            android:textColor="@color/colorOrange"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="5dp"
            tools:layout_editor_absoluteY="101dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnDangNhap"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:background="@color/colorOrange"
        android:text="@string/signin"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="normal"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="392dp"
        android:layout_height="41dp"
        android:layout_marginTop="36dp"
        android:text="@string/enter_password_signin"
        android:textColor="@color/colorOrange"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.263"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>